stuf/src/p4/tests/t015.err
Semantic error on line 2: Object 'pyramid' does not contain the member variable 'apex'.
