stuf/src/p4/tests/t015.gpl
triangle pyramid;
int top=pyramid.apex; //error: undeclared member
